--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,159 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.inputContainer h1{
+  font-family: 'Playfair Display', serif;
+  font-size: 3.5rem;
+  color: #fff;
+  margin-bottom: 1.5rem;
+}
+
+.inputContainer div{
+  display: flex;
+  margin-bottom: 2rem;
+}
+
+.inputContainer input{
+  width: 100%;
+  padding: 0.5rem 0.2rem 0.5rem 0;
+  text-indent: 1rem;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  background-color: rgb(13, 19, 125);
+}
+.inputContainer input::placeholder {
+  font-size: 0.9rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.inputContainer button {
+  margin-left: 01rem;
+  padding: 0 1rem;
+  height: 3rem;
+  font-size: 1rem;
+  font-weight: bold;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  color: white;
+  background-color: var(--primary-color);
+  border: none;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
+/* Result */
+
+.result{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+}
+.result p{
+  color: white;
+  border: 1px solid var(--primary-color);
+  padding: 0.5rem 1rem;
+  margin-right:1rem;
+}
+
+.result button {
+  padding: 0.5rem 1rem;
+  background-color: var(--primary-color);
+  color: white;
+  cursor: pointer;
+  border:none;
+}
+
+.result button.copied {
+  background: #fff;
+  color: var(--primary-color);
+}
+
+.noData {
+  color: white;
+  font-size : 1rem;
+}
+
+/* Background Animation */
+
+@keyframes cube {
   from {
-    transform: rotate(0deg);
+      transform: scale(0) rotate(0deg) translate(-50%, -50%);
+      opacity: 1;
   }
   to {
-    transform: rotate(360deg);
+      transform: scale(20) rotate(960deg) translate(-50%, -50%);
+      opacity: 0;
   }
+}
+
+.background {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  background: #c25700;
+  overflow: hidden;
+  z-index:-1
+}
+.background li {
+  position: absolute;
+  top: 80vh;
+  left: 45vw;
+  width: 10px;
+  height: 10px;
+  border: solid 1px #ae4e00;
+  color: transparent;
+  transform-origin: top left;
+  transform: scale(0) rotate(0deg) translate(-50%, -50%);
+  animation: cube 7s ease-in forwards infinite;
+}
+undefined
+.background li:nth-child(0) {
+  animation-delay: 0s;
+  left: 32vw;
+  top: 8vh;
+}
+
+.background li:nth-child(1) {
+  animation-delay: 2s;
+  left: 98vw;
+  top: 54vh;
+}
+
+.background li:nth-child(2) {
+  animation-delay: 4s;
+  left: 71vw;
+  top: 30vh;
+  border-color: #d55f00;
+}
+
+.background li:nth-child(3) {
+  animation-delay: 6s;
+  left: 34vw;
+  top: 42vh;
+  border-color: #d55f00;
+}
+
+.background li:nth-child(4) {
+  animation-delay: 8s;
+  left: 12vw;
+  top: 74vh;
+  border-color: #d55f00;
+}
+
+.background li:nth-child(5) {
+  animation-delay: 10s;
+  left: 50vw;
+  top: 86vh;
 }
